apps/opengist/config/opengist-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opengist
  namespace: opengist
  labels:
    app.kubernetes.io/name: opengist
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: opengist
  ports:
    - name: http
      port: 6157
      targetPort: http
