apps/opengist/config/opengist-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opengist
  namespace: opengist
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - secretName: opengist-tls
      hosts:
        - gist.cubancodelab.net
  rules:
    - host: gist.cubancodelab.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opengist
                port:
                  number: 6157
